--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -57,8 +57,8 @@
       <% if current_user.admin? || current_user.coordinador? %>
         <div class="form-group">
           <div class="checkbox">
-            <%= f.input :enabled, class: "form-control", 
-            :label => '¿Es usuario del sistema?' %>
+            <%= f.input(:enabled, class: "form-control", 
+            :label => '¿Es usuario del sistema?') %>
           </div>
         </div>
         <div class="form-group">
