Correccion de bugs

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -149,13 +149,11 @@
       <%end%>
       <div class="form-group" id="group">
         <%= f.label 'Grupo:' %><br>
-        <% if current_user.admin? || current_user.coordinador?%>
-          <%= f.input_field :group_id, collection: Group.all, 
-          class: "form-control" %>
-        <% else %>
-          <%= f.input_field :group_id, collection: Group.all, 
-          class: "form-control" %>
-        <% end %>
+
+        <%= f.select :group_id, options_for_select(
+            [['', '0']].concat(
+           @groupsdropdown.map{|c|[c.name, c.id]}), @user.group_id), include_blank: false, class: 'form-control'%>
+
       </div>
       <div class="form-group">
         <%= f.label 'Ingresa el link de facebook' %><br>
