--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -153,7 +153,7 @@
 
         <%= f.select :group_id, options_for_select(
             [['', '0']].concat(
-           @groupsdropdown.map{|c|[c.name, c.id]}), @user.group_id), include_blank: false, class: 'form-control'%>
+           @groups.map{|c|[c.name, c.id]}), @user.group_id), include_blank: false, class: 'form-control'%>
 
       </div>
       <div class="form-group">
