--- a/app/views/pollings/new.html.erb
+++ b/app/views/pollings/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New polling</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', pollings_path %>
+<div class="row">
+	<div class="col-md-4 col-md-offset-4">
+		<h1>Nueva Votación</h1>
+		<%= render 'form' %>
+	</div>
+</div>
