--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,38 +1,19 @@
-<div class="jumbotron">
-	<p id="notice"><%= notice %></p>
-<div class="row">
-	<div class="col-md-6">
-		<p>
-		  <strong>ID del mensaje:</strong>
-		  <%= @message.id %>
-		</p>
-		<p>
-		  <strong>Emisor:</strong>
-		  <%= @message.user_id %>
-		</p>
-
-		<p>
-		  <strong>Mensaje:</strong>
-		  <%= @message.message %>
-		</p>
-
-		<p>
-		  <strong>Deep:</strong>
-		  <%= @message.deep %>
-		</p>
-	</div>
-	<div class="col-md-6">
-		<p>
-		  <strong>Mensaje recibido por:</strong>
-		  <ul>
-		  	<li>Usuario 1</li>
-		  	<li>usuario 2</li>
-		  	<li>usuario 3</li>
-		  </ul>
-		</p>
-	</div>
-</div>
-
-</div>
+<h1>Detalle del mensaje</h1>
+<table class="table table-bordered table-striped table-hover">
+  <thead>
+    <tr>
+      <th>Destinatario</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+ <tbody>
+    <% @message_info.each do |u_msg| %>
+      <tr>
+        <td><%= link_to  u_msg['user_name'], "/users/"+u_msg['user_id'].to_s %></td>
+        <td><%= u_msg['message_status'] %></td>
+      </tr>
+    <% end %>
+  </tbody> 
+</table>
 
 <%= link_to 'Back', messages_path %>
