--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -106,27 +106,54 @@
       <div class="form-group">
         <%= f.label 'Nivel Jerárquico:' %>
         <% if current_user.admin? %>
-          <%= f.input_field :role, collection: User::ROLES_ADMIN, 
+          <%if @hijos.empty?%>
+      <%= f.input_field :role, collection: User::ROLES_ADMIN, 
           class: "form-control", id: "role_select_form", required: true%>
+      <%else%>
+      <%= f.input_field :role, collection: User::ROLES_ADMIN, 
+          class: "form-control", id: "role_select_form", required: true, disabled: true%>
+      <%end%>   
         <% end %>
         <% if current_user.coordinador? %>
-          <%= f.input_field :role, collection: User::ROLES_COORDINADOR, 
-          :label => "Rol", class: "form-control", required: true%>
+           <%if @hijos.empty?%>
+      <%= f.input_field :role, collection: User::ROLES_COORDINADOR, 
+          class: "form-control", id: "role_select_form", required: true%>
+      <%else%>
+      <%= f.input_field :role, collection: User::ROLES_COORDINADOR, 
+          class: "form-control", id: "role_select_form", required: true, disabled: true%>
+      <%end%>   
         <% end %>
         <% if current_user.enlace? %>
-          <%= f.input_field :role, collection: User::ROLES_ENLACE, 
-          :label => "Rol", class: "form-control", required: true%>
+           <%if @hijos.empty?%>
+            <%= f.input_field :role, collection: User::ROLES_ENLACE, 
+                class: "form-control", id: "role_select_form", required: true%>
+            <%else%>
+            <%= f.input_field :role, collection: User::ROLES_ENLACE, 
+                class: "form-control", id: "role_select_form", required: true, disabled: true%>
+            <%end%>   
         <% end %>
         <% if current_user.subenlace? %>
-          <%= f.input_field :role, collection: User::ROLES_SUBENLACE, 
-          :label => "Rol", class: "form-control", required: true%>
+           <%if @hijos.empty?%>
+            <%= f.input_field :role, collection: User::ROLES_SUBENLACE, 
+                class: "form-control", id: "role_select_form", required: true%>
+            <%else%>
+            <%= f.input_field :role, collection: User::ROLES_SUBENLACE, 
+                class: "form-control", id: "role_select_form", required: true, disabled: true%>
+            <%end%>   
         <% end %>
         <% if current_user.grupo? %>
-          <%= f.input :role, collection: User::ROLES_GRUPO, :label => "Rol", 
-          class: "form-control", required: true%>
+           <%if @hijos.empty?%>
+            <%= f.input_field :role, collection: User::ROLES_GRUPO, 
+                class: "form-control", id: "role_select_form", required: true%>
+            <%else%>
+            <%= f.input_field :role, collection: User::ROLES_GRUPO, 
+                class: "form-control", id: "role_select_form", required: true, disabled: true%>
+            <%end%>   
         <% end %>
       </div>
-      
+
+
+
         <div class="form-group" id="select_subenlace">
           <%= f.label 'Subenlace:' %><br>
           <%= f.select :subenlace_id, options_for_select(
