remove users_table id from lista_nominal tab

--- a/app/views/users/lista_nominal.html.erb
+++ b/app/views/users/lista_nominal.html.erb
@@ -64,8 +64,7 @@ Votación
   <% end %>
 </select>  
 <a href="#" class="btn btn-success btn-block" id="btn-enviar">Guardar</a>
-
-    <br><br>
+  <br><br>
   <table class="table table-bordered table-striped table-hover" id="users_table">  
     <thead>
       <tr>
@@ -192,7 +191,7 @@ Votación
   </div>	
 </div>
 <div id="pane2" class="tab-pane">
-  <table class="table table-bordered table-striped table-hover" id="users_table">  
+  <table class="table table-bordered table-striped table-hover" >  
     <thead>
       <tr>
         <th >
