--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -23,6 +23,7 @@
         	<%= f.submit 'Guardar Mensaje', :class => "btn btn-primary" %>
         	<a href="#" class="btn btn-primary" id="send_twilio">Enviar SMS Masivo</a>
         	<a href="#" class="btn btn-primary">Enviar Correo Masivo</a>
+        	<a href="<%= messages_path %>" class="btn btn-primary">Mensajes enviados</a>
       	</div>
 			<% end %>
 		</div>
