--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,7 +12,7 @@
       <tr>
         <td><%= message['msg']%></td>
         <td><%= message['count']%></td>
-        <td><%= link_to 'Ver detalle', "messages/"+message['id'].to_s %></td> 
+        <td><%= link_to 'Ver detalle', message_path(message['id']) %></td> 
       </tr>
     <% end %>
   </tbody> 
