--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -21,8 +21,8 @@
 				</div>
 				<div class="panel-footer">
         	<%= f.submit 'Guardar Mensaje', :class => "btn btn-primary" %>
-        	<a href="#" class="btn btn-primary" id="send_twilio">Enviar SMS Masivo</a>
-        	<a href="#" class="btn btn-primary" id="sendgrid_email">Enviar Correo Masivo</a>
+        	<button class="btn btn-primary" id="send_twilio">Enviar SMS Masivo</button>
+        	<button class="btn btn-primary" id="sendgrid_email">Enviar Correo Masivo</button>
         	<a href="<%= messages_path %>" class="btn btn-primary">Mensajes enviados</a>
       	</div>
 			<% end %>
