--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,3 +1,4 @@
+<% if !current_user.communication? %>
 <div class="row">
   <div  class="col-sm-12">
     <div class="panel panel-default">
@@ -28,7 +29,9 @@
     </div>
   </div>
 </div>
+<% end %>
 <div class="row">
+  <% if !current_user.communication? %>
   <div  class="col-sm-6">
     <div class="panel panel-default">
       <!-- Default panel contents -->
@@ -40,6 +43,7 @@
       </div>
     </div>
   </div>
+  <% end %>
   <div  class="col-sm-6">
     <div class="panel panel-default">
       <!-- Default panel contents -->
