--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,15 @@
 	  </div>
 	</div>
 <% end %>
-<nav class="navbar navbar-inverse" role="navigation">
+<% if user_signed_in? %>
+	<% if !current_user.communication? %>
+	<nav class="navbar navbar-black" role="navigation">
+	<% else %>
+	<nav class="navbar navbar-inverse" role="navigation">
+	<% end %>
+<% else %>
+	<nav class="navbar navbar-inverse" role="navigation">
+<% end %>
 	<div class="container">
 	  <!-- Brand and toggle get grouped for better mobile display -->
 	  <div class="navbar-header">
