--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -65,11 +65,11 @@
         </div>
         <div class="form-group">
           <%= f.label 'Contraseña*' %><br>
-          <%= f.password_field :password, class: "form-control hide", required: true %>
+          <%= f.password_field :password, class: "form-control hide" %>
         </div>
         <div class="form-group">
           <%= f.label 'Confirmar Contraseña*' %><br>
-          <%= f.password_field :password_confirmation, class: "form-control hide", required: true %>
+          <%= f.password_field :password_confirmation, class: "form-control hide" %>
         </div>
       <% end %>
       <div class="row">
