--- a/app/views/pollings/detalle.html.erb
+++ b/app/views/pollings/detalle.html.erb
@@ -211,3 +211,6 @@
   </tbody>
   </table>
 </div>
+<div class="row"> 
+  <div class="col-md-3 col-md-offset-5">Ya votaron: <span id="votos_span"></span></div>
+</div>
