--- a/app/views/pollings/detalle.html.erb
+++ b/app/views/pollings/detalle.html.erb
@@ -198,11 +198,11 @@
           <p class="small">
           <% if a.check %>
               <input type="checkbox" name="temp_chek" class="check2" 
-                data-id="<%= a.id %>" checked>
+                data-id="<%= a.lid %>" checked>
                 Ya votó 
             <% else %>
               <input type="checkbox" name="temp_chek" class="check2" 
-                data-id="<%= a.id %>" >
+                data-id="<%= a.lid %>" >
                 Ya votó 
             <% end %>
           </p>
